# build_api_example

./: .cmake-format.yaml  CMakeLists.txt  Readme.adoc  conanfile.txt  l_unit.puml
doc/: d_lib.puml  d_p_lib.puml  d_p_unit_test.puml  d_unit_test.puml  l_p_unit.puml  l_p_unit_test.puml  l_unit.puml  l_unit_test.puml  names.puml  p_unit.puml  p_unit_test.puml
my_component/: CMakeLists.txt
my_component/inc/: my_component.hpp
my_component/inc_mock/: my_component_mock.hpp
my_component/src/: my_component_impl.cpp
my_component/src_mock/: my_component_mock.cpp
my_program/: CMakeLists.txt  main.cpp
my_using_component/: CMakeLists.txt
my_using_component/inc/: my_using_component.hpp
my_using_component/src/: my_using_component.cpp
